--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@ title: Home
     <div class="divide-y divide-gray-200">
         <div class="py-8 text-base leading-6 space-y-4 text-gray-700 sm:text-lg sm:leading-7">
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae at quae hic unde tenetur! Alias et
-                ducimus
-                corrupti, optio ipsam exercitationem laudantium obcaecati ullam, odit delectus numquam veritatis
-                assumenda ea.
+                {{ site.description | default: site.github.project_tagline }}
             </p>
         </div>
     </div>
